docs: Add API Spec for Customer Authorization
